// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Components/Badge Colors smoke-test 1`] = `
<div class="flex flex-col gap-4">
  <div class="flex flex-wrap gap-4">
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary-foreground bg-primary border-primary"
    >
      <div class="flex items-center">
        <div class>
          Primary
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-secondary-foreground bg-secondary border-border"
    >
      <div class="flex items-center">
        <div class>
          Secondary
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-success-foreground bg-success border-success"
    >
      <div class="flex items-center">
        <div class>
          Success
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-destructive-foreground bg-destructive border-destructive"
    >
      <div class="flex items-center">
        <div class>
          Error
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-warning-foreground bg-warning border-warning"
    >
      <div class="flex items-center">
        <div class>
          Warning
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-info-foreground bg-info border-info"
    >
      <div class="flex items-center">
        <div class>
          Info
        </div>
      </div>
    </div>
  </div>
  <div class="flex flex-wrap gap-4">
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary border-primary"
    >
      <div class="flex items-center">
        <div class>
          Default
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary border-primary"
    >
      <div class="flex items-center">
        <div class>
          Primary
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-muted-foreground bg-transparent border-border"
    >
      <div class="flex items-center">
        <div class>
          Secondary
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-success bg-transparent border-success"
    >
      <div class="flex items-center">
        <div class>
          Success
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-destructive bg-transparent border-destructive"
    >
      <div class="flex items-center">
        <div class>
          Error
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-warning bg-transparent border-warning"
    >
      <div class="flex items-center">
        <div class>
          Warning
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-info bg-transparent border-info"
    >
      <div class="flex items-center">
        <div class>
          Info
        </div>
      </div>
    </div>
  </div>
  <div class="flex flex-wrap gap-4">
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary bg-primary/10 border-primary/10"
    >
      <div class="flex items-center">
        <div class>
          Primary
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-muted-foreground bg-muted border-border"
    >
      <div class="flex items-center">
        <div class>
          Secondary
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-success bg-success/10 border-success/10"
    >
      <div class="flex items-center">
        <div class>
          Success
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-destructive bg-destructive/10 border-destructive/10"
    >
      <div class="flex items-center">
        <div class>
          Error
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-warning bg-warning/10 border-warning/10"
    >
      <div class="flex items-center">
        <div class>
          Warning
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-info bg-info/10 border-info/10"
    >
      <div class="flex items-center">
        <div class>
          Info
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Badge Default smoke-test 1`] = `
<div data-slot="badge"
     id="_r_ID_"
     class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-sm [&amp;&gt;svg]:size-3 text-primary-foreground bg-primary border-primary"
>
  <div class="flex items-center">
    <div class>
      IGRPBadge
    </div>
  </div>
</div>
`;

exports[`Components/Badge DotsAndIcons smoke-test 1`] = `
<div class="flex flex-wrap gap-4">
  <div data-slot="badge"
       id="_r_ID_"
       class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-success-foreground bg-success border-success"
  >
    <div class="size-1.5 rounded-full bg-success">
    </div>
    <div class="flex items-center gap-1">
      <svg xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-info"
           aria-hidden="true"
           id="Info"
      >
        <circle cx="12"
                cy="12"
                r="10"
        >
        </circle>
        <path d="M12 16v-4">
        </path>
        <path d="M12 8h.01">
        </path>
      </svg>
      <div class>
        Active
      </div>
    </div>
  </div>
  <div data-slot="badge"
       id="_r_ID_"
       class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-destructive-foreground bg-destructive border-destructive"
  >
    <div class="size-1.5 rounded-full bg-destructive">
    </div>
    <div class="flex items-center gap-1">
      <svg xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-info"
           aria-hidden="true"
           id="Info"
      >
        <circle cx="12"
                cy="12"
                r="10"
        >
        </circle>
        <path d="M12 16v-4">
        </path>
        <path d="M12 8h.01">
        </path>
      </svg>
      <div class>
        Failed
      </div>
    </div>
  </div>
  <div data-slot="badge"
       id="_r_ID_"
       class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary-foreground bg-primary border-primary"
  >
    <div class="size-1.5 rounded-full bg-primary">
    </div>
    <div class="flex items-center gap-1">
      <svg xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-info"
           aria-hidden="true"
           id="Info"
      >
        <circle cx="12"
                cy="12"
                r="10"
        >
        </circle>
        <path d="M12 16v-4">
        </path>
        <path d="M12 8h.01">
        </path>
      </svg>
      <div class>
        Processing
      </div>
    </div>
  </div>
  <div data-slot="badge"
       id="_r_ID_"
       class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-secondary-foreground bg-secondary border-border"
  >
    <div class="size-1.5 rounded-full bg-muted-foreground">
    </div>
    <div class="flex items-center">
      <div class>
        Featured
      </div>
    </div>
  </div>
  <div data-slot="badge"
       id="_r_ID_"
       class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-warning-foreground bg-warning border-warning"
  >
    <div class="size-1.5 rounded-full bg-warning">
    </div>
    <div class="flex items-center gap-1">
      <svg xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-info"
           aria-hidden="true"
           id="Info"
      >
        <circle cx="12"
                cy="12"
                r="10"
        >
        </circle>
        <path d="M12 16v-4">
        </path>
        <path d="M12 8h.01">
        </path>
      </svg>
      <div class>
        Attention
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Badge IconOnly smoke-test 1`] = `
<div class="flex flex-wrap gap-4">
  <div data-slot="badge"
       id="_r_ID_"
       class="rounded-full shadow-none border px-3 py-0.5 font-medium whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary-foreground bg-primary border-primary aspect-square flex items-center justify-center size-6"
  >
    <div class="flex items-center">
      <svg xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-info"
           aria-hidden="true"
           id="Info"
      >
        <circle cx="12"
                cy="12"
                r="10"
        >
        </circle>
        <path d="M12 16v-4">
        </path>
        <path d="M12 8h.01">
        </path>
      </svg>
      <div class>
      </div>
    </div>
  </div>
  <div data-slot="badge"
       id="_r_ID_"
       class="rounded-full shadow-none border px-3 py-0.5 font-medium whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-success-foreground bg-success border-success aspect-square flex items-center justify-center size-6"
  >
    <div class="flex items-center">
      <svg xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-info"
           aria-hidden="true"
           id="Info"
      >
        <circle cx="12"
                cy="12"
                r="10"
        >
        </circle>
        <path d="M12 16v-4">
        </path>
        <path d="M12 8h.01">
        </path>
      </svg>
      <div class>
      </div>
    </div>
  </div>
  <div data-slot="badge"
       id="_r_ID_"
       class="rounded-full shadow-none border px-3 py-0.5 font-medium whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-destructive-foreground bg-destructive border-destructive aspect-square flex items-center justify-center size-6"
  >
    <div class="flex items-center">
      <svg xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-info"
           aria-hidden="true"
           id="Info"
      >
        <circle cx="12"
                cy="12"
                r="10"
        >
        </circle>
        <path d="M12 16v-4">
        </path>
        <path d="M12 8h.01">
        </path>
      </svg>
      <div class>
      </div>
    </div>
  </div>
  <div data-slot="badge"
       id="_r_ID_"
       class="rounded-full shadow-none border px-3 py-0.5 font-medium whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-warning-foreground bg-warning border-warning aspect-square flex items-center justify-center size-6"
  >
    <div class="flex items-center">
      <svg xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-info"
           aria-hidden="true"
           id="Info"
      >
        <circle cx="12"
                cy="12"
                r="10"
        >
        </circle>
        <path d="M12 16v-4">
        </path>
        <path d="M12 8h.01">
        </path>
      </svg>
      <div class>
      </div>
    </div>
  </div>
  <div data-slot="badge"
       id="_r_ID_"
       class="rounded-full shadow-none border px-3 py-0.5 font-medium whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary border-primary aspect-square flex items-center justify-center size-6"
  >
    <div class="flex items-center">
      <div class>
      </div>
    </div>
  </div>
  <div data-slot="badge"
       id="_r_ID_"
       class="rounded-full shadow-none border px-3 py-0.5 font-medium whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-muted-foreground bg-muted border-border aspect-square flex items-center justify-center size-6"
  >
    <div class="flex items-center">
      <div class>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Badge IconSizes smoke-test 1`] = `
<div class="flex items-center gap-4">
  <div data-slot="badge"
       id="_r_ID_"
       class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary-foreground bg-primary border-primary"
  >
    <div class="flex items-center gap-1">
      <svg xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-info"
           aria-hidden="true"
           id="Info"
      >
        <circle cx="12"
                cy="12"
                r="10"
        >
        </circle>
        <path d="M12 16v-4">
        </path>
        <path d="M12 8h.01">
        </path>
      </svg>
      <div class>
        Small
      </div>
    </div>
  </div>
  <div data-slot="badge"
       id="_r_ID_"
       class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-sm [&amp;&gt;svg]:size-3 text-primary-foreground bg-primary border-primary"
  >
    <div class="flex items-center gap-1">
      <svg xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-info"
           aria-hidden="true"
           id="Info"
      >
        <circle cx="12"
                cy="12"
                r="10"
        >
        </circle>
        <path d="M12 16v-4">
        </path>
        <path d="M12 8h.01">
        </path>
      </svg>
      <div class>
        Medium
      </div>
    </div>
  </div>
  <div data-slot="badge"
       id="_r_ID_"
       class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-md [&amp;&gt;svg]:size-3.5 text-primary-foreground bg-primary border-primary"
  >
    <div class="flex items-center gap-1">
      <svg xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-info"
           aria-hidden="true"
           id="Info"
      >
        <circle cx="12"
                cy="12"
                r="10"
        >
        </circle>
        <path d="M12 16v-4">
        </path>
        <path d="M12 8h.01">
        </path>
      </svg>
      <div class>
        Large
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Badge Sizes smoke-test 1`] = `
<div class="flex items-center gap-4">
  <div data-slot="badge"
       id="_r_ID_"
       class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary-foreground bg-primary border-primary"
  >
    <div class="flex items-center">
      <div class>
        Small
      </div>
    </div>
  </div>
  <div data-slot="badge"
       id="_r_ID_"
       class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-sm [&amp;&gt;svg]:size-3 text-primary-foreground bg-primary border-primary"
  >
    <div class="flex items-center">
      <div class>
        Medium
      </div>
    </div>
  </div>
  <div data-slot="badge"
       id="_r_ID_"
       class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-md [&amp;&gt;svg]:size-3.5 text-primary-foreground bg-primary border-primary"
  >
    <div class="flex items-center">
      <div class>
        Large
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Badge UsageExamples smoke-test 1`] = `
<div class="flex flex-col gap-6">
  <div class="flex flex-col gap-2">
    <h3 class="text-lg font-medium">
      Status indicators
    </h3>
    <div class="flex flex-wrap gap-3">
      <div data-slot="badge"
           id="_r_ID_"
           class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-success bg-success/10 border-success/10"
      >
        <div class="size-1.5 rounded-full bg-success">
        </div>
        <div class="flex items-center">
          <div class>
            Active
          </div>
        </div>
      </div>
      <div data-slot="badge"
           id="_r_ID_"
           class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-destructive bg-destructive/10 border-destructive/10"
      >
        <div class="size-1.5 rounded-full bg-destructive">
        </div>
        <div class="flex items-center">
          <div class>
            Failed
          </div>
        </div>
      </div>
      <div data-slot="badge"
           id="_r_ID_"
           class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary bg-primary/10 border-primary/10"
      >
        <div class="size-1.5 rounded-full bg-primary">
        </div>
        <div class="flex items-center">
          <div class>
            Pending
          </div>
        </div>
      </div>
      <div data-slot="badge"
           id="_r_ID_"
           class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary border-primary"
      >
        <div class="size-1.5 rounded-full bg-primary">
        </div>
        <div class="flex items-center">
          <div class>
            Processing
          </div>
        </div>
      </div>
      <div data-slot="badge"
           id="_r_ID_"
           class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-warning bg-warning/10 border-warning/10"
      >
        <div class="size-1.5 rounded-full bg-warning">
        </div>
        <div class="flex items-center">
          <div class>
            Attention Required
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="flex flex-col gap-2">
    <h3 class="text-lg font-medium">
      Categories
    </h3>
    <div class="flex flex-wrap gap-3">
      <div data-slot="badge"
           id="_r_ID_"
           class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary-foreground bg-primary border-primary"
      >
        <div class="flex items-center">
          <div class>
            Technology
          </div>
        </div>
      </div>
      <div data-slot="badge"
           id="_r_ID_"
           class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-secondary-foreground bg-secondary border-border"
      >
        <div class="flex items-center">
          <div class>
            Design
          </div>
        </div>
      </div>
      <div data-slot="badge"
           id="_r_ID_"
           class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-success-foreground bg-success border-success"
      >
        <div class="flex items-center">
          <div class>
            Marketing
          </div>
        </div>
      </div>
      <div data-slot="badge"
           id="_r_ID_"
           class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary-foreground bg-primary border-primary"
      >
        <div class="flex items-center">
          <div class>
            Business
          </div>
        </div>
      </div>
      <div data-slot="badge"
           id="_r_ID_"
           class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-info-foreground bg-info border-info"
      >
        <div class="flex items-center">
          <div class>
            Education
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="flex flex-col gap-2">
    <h3 class="text-lg font-medium">
      Notifications
    </h3>
    <div class="flex flex-wrap gap-3">
      <div data-slot="badge"
           id="_r_ID_"
           class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-destructive-foreground bg-destructive border-destructive"
      >
        <div class="flex items-center">
          <div class>
            3
          </div>
        </div>
      </div>
      <div data-slot="badge"
           id="_r_ID_"
           class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary border-primary"
      >
        <div class="flex items-center">
          <div class>
            New messages
          </div>
        </div>
      </div>
      <div data-slot="badge"
           id="_r_ID_"
           class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-success bg-success/10 border-success/10"
      >
        <div class="size-1.5 rounded-full bg-success">
        </div>
        <div class="flex items-center">
          <div class>
            Updated
          </div>
        </div>
      </div>
      <div data-slot="badge"
           id="_r_ID_"
           class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-warning bg-warning/10 border-warning/10"
      >
        <div class="flex items-center gap-1">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="16"
               height="16"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-info"
               aria-hidden="true"
               id="Info"
          >
            <circle cx="12"
                    cy="12"
                    r="10"
            >
            </circle>
            <path d="M12 16v-4">
            </path>
            <path d="M12 8h.01">
            </path>
          </svg>
          <div class>
            Expiring soon
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Badge Variants smoke-test 1`] = `
<div class="flex flex-wrap gap-4">
  <div data-slot="badge"
       id="_r_ID_"
       class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary-foreground bg-primary border-primary"
  >
    <div class="flex items-center">
      <div class>
        Solid
      </div>
    </div>
  </div>
  <div data-slot="badge"
       id="_r_ID_"
       class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary border-primary"
  >
    <div class="flex items-center">
      <div class>
        Outline
      </div>
    </div>
  </div>
  <div data-slot="badge"
       id="_r_ID_"
       class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary bg-primary/10 border-primary/10"
  >
    <div class="flex items-center">
      <div class>
        Soft
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Badge WithDots smoke-test 1`] = `
<div class="flex flex-col gap-4">
  <div class="flex flex-wrap gap-4">
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-success-foreground bg-success border-success"
    >
      <div class="size-1.5 rounded-full bg-success">
      </div>
      <div class="flex items-center">
        <div class>
          Active
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-destructive-foreground bg-destructive border-destructive"
    >
      <div class="size-1.5 rounded-full bg-destructive">
      </div>
      <div class="flex items-center">
        <div class>
          Failed
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary-foreground bg-primary border-primary"
    >
      <div class="size-1.5 rounded-full bg-primary">
      </div>
      <div class="flex items-center">
        <div class>
          Processing
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-secondary-foreground bg-secondary border-border"
    >
      <div class="size-1.5 rounded-full bg-muted-foreground">
      </div>
      <div class="flex items-center">
        <div class>
          Pending
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-warning-foreground bg-warning border-warning"
    >
      <div class="size-1.5 rounded-full bg-warning">
      </div>
      <div class="flex items-center">
        <div class>
          Attention
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-indigo-foreground bg-indigo border-indigo"
    >
      <div class="size-1.5 rounded-full bg-indigo">
      </div>
      <div class="flex items-center">
        <div class>
          Attention
        </div>
      </div>
    </div>
  </div>
  <div class="flex flex-wrap gap-4">
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-success bg-transparent border-success"
    >
      <div class="size-1.5 rounded-full bg-success">
      </div>
      <div class="flex items-center">
        <div class>
          Active
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-destructive bg-transparent border-destructive"
    >
      <div class="size-1.5 rounded-full bg-destructive">
      </div>
      <div class="flex items-center">
        <div class>
          Failed
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary border-primary"
    >
      <div class="size-1.5 rounded-full bg-primary">
      </div>
      <div class="flex items-center">
        <div class>
          Processing
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-warning bg-transparent border-warning"
    >
      <div class="size-1.5 rounded-full bg-warning">
      </div>
      <div class="flex items-center">
        <div class>
          Attention
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-indigo bg-transparent border-indigo"
    >
      <div class="size-1.5 rounded-full bg-indigo">
      </div>
      <div class="flex items-center">
        <div class>
          Alert
        </div>
      </div>
    </div>
  </div>
  <div class="flex flex-wrap gap-4">
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-success bg-success/10 border-success/10"
    >
      <div class="size-1.5 rounded-full bg-success">
      </div>
      <div class="flex items-center">
        <div class>
          Active
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-destructive bg-destructive/10 border-destructive/10"
    >
      <div class="size-1.5 rounded-full bg-destructive">
      </div>
      <div class="flex items-center">
        <div class>
          Failed
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary bg-primary/10 border-primary/10"
    >
      <div class="size-1.5 rounded-full bg-primary">
      </div>
      <div class="flex items-center">
        <div class>
          Processing
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-warning bg-warning/10 border-warning/10"
    >
      <div class="size-1.5 rounded-full bg-warning">
      </div>
      <div class="flex items-center">
        <div class>
          Attention
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-indigo bg-indigo/10 border-indigo/10"
    >
      <div class="size-1.5 rounded-full bg-indigo">
      </div>
      <div class="flex items-center">
        <div class>
          Attention
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Badge WithIcons smoke-test 1`] = `
<div class="flex flex-col gap-4">
  <div class="flex flex-wrap gap-4">
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-success-foreground bg-success border-success"
    >
      <div class="flex items-center gap-1">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="16"
             height="16"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-info"
             aria-hidden="true"
             id="Info"
        >
          <circle cx="12"
                  cy="12"
                  r="10"
          >
          </circle>
          <path d="M12 16v-4">
          </path>
          <path d="M12 8h.01">
          </path>
        </svg>
        <div class>
          Success
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-destructive-foreground bg-destructive border-destructive"
    >
      <div class="flex items-center gap-1">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="16"
             height="16"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-info"
             aria-hidden="true"
             id="Info"
        >
          <circle cx="12"
                  cy="12"
                  r="10"
          >
          </circle>
          <path d="M12 16v-4">
          </path>
          <path d="M12 8h.01">
          </path>
        </svg>
        <div class>
          Error
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary-foreground bg-primary border-primary"
    >
      <div class="flex items-center gap-1">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="16"
             height="16"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-info"
             aria-hidden="true"
             id="Info"
        >
          <circle cx="12"
                  cy="12"
                  r="10"
          >
          </circle>
          <path d="M12 16v-4">
          </path>
          <path d="M12 8h.01">
          </path>
        </svg>
        <div class>
          Info
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-secondary-foreground bg-secondary border-border"
    >
      <div class="flex items-center gap-1">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="16"
             height="16"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-info"
             aria-hidden="true"
             id="Info"
        >
          <circle cx="12"
                  cy="12"
                  r="10"
          >
          </circle>
          <path d="M12 16v-4">
          </path>
          <path d="M12 8h.01">
          </path>
        </svg>
        <div class>
          Featured
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-warning-foreground bg-warning border-warning"
    >
      <div class="flex items-center gap-1">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="16"
             height="16"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-info"
             aria-hidden="true"
             id="Info"
        >
          <circle cx="12"
                  cy="12"
                  r="10"
          >
          </circle>
          <path d="M12 16v-4">
          </path>
          <path d="M12 8h.01">
          </path>
        </svg>
        <div class>
          Warning
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-info-foreground bg-info border-info"
    >
      <div class="flex items-center gap-1">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="16"
             height="16"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-info"
             aria-hidden="true"
             id="Info"
        >
          <circle cx="12"
                  cy="12"
                  r="10"
          >
          </circle>
          <path d="M12 16v-4">
          </path>
          <path d="M12 8h.01">
          </path>
        </svg>
        <div class>
          Information
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary-foreground bg-primary border-primary"
    >
      <div class="flex items-center gap-1">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="16"
             height="16"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-info"
             aria-hidden="true"
             id="Info"
        >
          <circle cx="12"
                  cy="12"
                  r="10"
          >
          </circle>
          <path d="M12 16v-4">
          </path>
          <path d="M12 8h.01">
          </path>
        </svg>
        <div class>
          Notification
        </div>
      </div>
    </div>
  </div>
  <div class="flex flex-wrap gap-4">
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-success bg-transparent border-success"
    >
      <div class="flex items-center gap-1">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="16"
             height="16"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-info"
             aria-hidden="true"
             id="Info"
        >
          <circle cx="12"
                  cy="12"
                  r="10"
          >
          </circle>
          <path d="M12 16v-4">
          </path>
          <path d="M12 8h.01">
          </path>
        </svg>
        <div class>
          Success
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-destructive bg-transparent border-destructive"
    >
      <div class="flex items-center gap-1">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="16"
             height="16"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-info"
             aria-hidden="true"
             id="Info"
        >
          <circle cx="12"
                  cy="12"
                  r="10"
          >
          </circle>
          <path d="M12 16v-4">
          </path>
          <path d="M12 8h.01">
          </path>
        </svg>
        <div class>
          Error
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary border-primary"
    >
      <div class="flex items-center gap-1">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="16"
             height="16"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-info"
             aria-hidden="true"
             id="Info"
        >
          <circle cx="12"
                  cy="12"
                  r="10"
          >
          </circle>
          <path d="M12 16v-4">
          </path>
          <path d="M12 8h.01">
          </path>
        </svg>
        <div class>
          Info
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-warning bg-transparent border-warning"
    >
      <div class="flex items-center gap-1">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="16"
             height="16"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-info"
             aria-hidden="true"
             id="Info"
        >
          <circle cx="12"
                  cy="12"
                  r="10"
          >
          </circle>
          <path d="M12 16v-4">
          </path>
          <path d="M12 8h.01">
          </path>
        </svg>
        <div class>
          Warning
        </div>
      </div>
    </div>
  </div>
  <div class="flex flex-wrap gap-4">
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-success bg-success/10 border-success/10"
    >
      <div class="flex items-center gap-1">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="16"
             height="16"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-info"
             aria-hidden="true"
             id="Info"
        >
          <circle cx="12"
                  cy="12"
                  r="10"
          >
          </circle>
          <path d="M12 16v-4">
          </path>
          <path d="M12 8h.01">
          </path>
        </svg>
        <div class>
          Success
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-destructive bg-destructive/10 border-destructive/10"
    >
      <div class="flex items-center gap-1">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="16"
             height="16"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-info"
             aria-hidden="true"
             id="Info"
        >
          <circle cx="12"
                  cy="12"
                  r="10"
          >
          </circle>
          <path d="M12 16v-4">
          </path>
          <path d="M12 8h.01">
          </path>
        </svg>
        <div class>
          Error
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-primary bg-primary/10 border-primary/10"
    >
      <div class="flex items-center gap-1">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="16"
             height="16"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-info"
             aria-hidden="true"
             id="Info"
        >
          <circle cx="12"
                  cy="12"
                  r="10"
          >
          </circle>
          <path d="M12 16v-4">
          </path>
          <path d="M12 8h.01">
          </path>
        </svg>
        <div class>
          Info
        </div>
      </div>
    </div>
    <div data-slot="badge"
         id="_r_ID_"
         class="inline-flex items-center justify-center rounded-full shadow-none border px-3 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-warning bg-warning/10 border-warning/10"
    >
      <div class="flex items-center gap-1">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="16"
             height="16"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-info"
             aria-hidden="true"
             id="Info"
        >
          <circle cx="12"
                  cy="12"
                  r="10"
          >
          </circle>
          <path d="M12 16v-4">
          </path>
          <path d="M12 8h.01">
          </path>
        </svg>
        <div class>
          Warning
        </div>
      </div>
    </div>
  </div>
</div>
`;
